--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1407,7 +1407,7 @@
 %h2#tensorflow TensorFlow
 
 
-%p I clicked the next link in the series:
+%p In codelabs-tab, I clicked the next link in the series:
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-tensorflow' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-tensorflow
@@ -1430,14 +1430,12 @@
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-tensorflow/#2' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-tensorflow/#2
 
-%p I visited the console-URL:
+%p In GCP-tab, I visited the console-URL:
 %p
   %a(href='https://console.cloud.google.com' target='x')
     https://console.cloud.google.com
 
-%p I started a Cloud-Shell by clicking an icon in upper-left.
-
-%p Inside the Cloud-Shell, I issued a shell command:
+%p In Cloud-Shell-tab, I issued a shell command:
 
 .syntax
   %pre
@@ -1458,6 +1456,8 @@
   %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab/notebooks' target='x')
     https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab/notebooks
 
+%p I move that page so it occupied DataLab-tab [ tab 6 ].
+
 %p I clicked the +notebook button in upper-left.
 
 %p GCP served a page with name: "Untitled Notebook1".
@@ -1469,7 +1469,7 @@
 %p A GCP-datalab notebook offers behavior similar to a Jupyter notebook.
 
 
-%p I visited the URL listed below which offers syntax for a Jupyter notebook:
+%p In Github-tab, I visited the URL listed below which offers syntax for a Jupyter notebook:
 %p
   %a(href='http://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/CPB100/lab4a/demandforecast.ipynb' target='x')
     demandforecast.ipynb
@@ -1496,7 +1496,7 @@
   I copied syntax from
   %a(href='http://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/CPB100/lab4a/demandforecast.ipynb' target='x')
     demandforecast.ipynb
-  into "Untitled Notebook1".
+  into "Untitled Notebook1", in DataLab-tab.
 
 %p I did the copying bit-by-bit; I was patient.
 
@@ -1507,7 +1507,7 @@
   %a(href='http://github.com/GoogleCloudPlatform/training-data-analyst/tree/master/CPB100/lab4a/demandforecast.ipynb' target='x')
     demandforecast.ipynb
     
-%p Next, I visited this URL:
+%p Next, in GCP-tab, I visited this URL:
 
 %p
   %a(href='https://console.cloud.google.com/compute/instances' target='x')
@@ -1522,7 +1522,7 @@
 %hr/
 %h2#translate-api Translate-API
 
-%p I clicked the next link in the series:
+%p In codelabs-tab, I clicked the next link in the series:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api' target='x')
@@ -1546,7 +1546,7 @@
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#2' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#2
   
-%p I visited this URL:
+%p In GCP-tab, I visited this URL:
 
 %p
   %a(href='https://console.cloud.google.com/apis' target='x')
@@ -1559,7 +1559,6 @@
 %p GCP served me a large list of APIs.
 
 %p I enabled: "Google Cloud Vision API".
-
 
 %p GCP served me this page:
 
@@ -1595,21 +1594,19 @@
 
 %p I followed the same process to enable Translate API, Speech API, and Natural Language APIs.
 
-%p I studied the next codelabs-page:
+%p In codelabs-tab, I studied the next codelabs-page:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#3' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#3
 
-%p I visited my console URL:
+%p In GCP-tab, I visited my console URL:
 
 %p
   %a(href='https://console.cloud.google.com' target='x')
     https://console.cloud.google.com
 
-%p I clicked the Cloud-Shell button at upper-right.
-
-%p After GCP gave me a Cloud-Shell, I entered a shell command:
+%p In  Cloud-Shell-tab, I entered a shell command:
 
 .syntax
   %pre
@@ -1629,7 +1626,9 @@
   %a(href='https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab/notebooks#' target='x')
     https://8081-dot-3516970-dot-devshell.appspot.com/tree/datalab/notebooks#
 
-%p I studied the next codelabs-page:
+%p I moved that page so it was tab 6, the DataLab-tab.
+
+%p In codelabs-tab, I studied the next codelabs-page:
 
 %p
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-translate-api/#4' target='x')
@@ -1653,7 +1652,7 @@
   %pre
     %code AIzaSyBhcruU8RW0PeOllj-yxkfLnef3YRHwCt
 
-%p I loaded a URL from github.com:
+%p In Github-tab, I loaded a URL from github.com:
 
 %p
   %a(href='https://github.com/GoogleCloudPlatform/training-data-analyst/blob/master/CPB100/lab4c/mlapis.ipynb' target='x')
