--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1703,6 +1703,17 @@
 
 
 %h2#serverless-ingest Serverless-Ingest
+
+
+%p In codelabs-tab, I clicked the next link in the series:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest
+
+
+
+
 %p under construction
 
 %a(href='#top') [top]
