--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1711,6 +1711,23 @@
   %a(href='https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest' target='x')
     https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest
 
+%p I studied the page it served me:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest/#0' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest/#0
+
+%p I clicked the next node in the sequence:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest/#1' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest/#1
+
+%p In Cloud-Shell-tab, I issued a command:
+
+.syntax
+  %pre
+    %code git clone https://github.com/GoogleCloudPlatform/training-data-analyst
+
+
 
 
 
