--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1901,8 +1901,13 @@
 
 %p Then at the end it issued an error.
 
+%p I will take time to debug this after I gain more knowledge about these topics:
 
-%p under construction
+%ul
+  %li GCP
+  %li Docker
+  %li App Engine
+
 
 %a(href='#top') [top]
 %hr/
