--- a/app/views/lessons/_lesson001w2.erb
+++ b/app/views/lessons/_lesson001w2.erb
@@ -1,10 +1,7 @@
-<code class='bash'>cs101@cpb100-195004:~/training-data-analyst/CPB100/lab2b/scheduled$ cat cron.yaml
+<code class='bash'>
 cron:
 - description : ingest earthquake data
   url : /ingest
   schedule: every 2 hours
-  target: quakes
-cs101@cpb100-195004:~/training-data-analyst/CPB100/lab2b/scheduled$
-cs101@cpb100-195004:~/training-data-analyst/CPB100/lab2b/scheduled$
-cs101@cpb100-195004:~/training-data-analyst/CPB100/lab2b/scheduled$
+  target: default
 </code>
