--- a/app/views/lessons/_lesson001x.erb
+++ b/app/views/lessons/_lesson001x.erb
@@ -1,7 +1,7 @@
 <code class='bash'>runtime: custom
 env: flex
 entrypoint: gunicorn -b :$PORT ingestapp:app
-service: quakes
+service: default
 
 #[START env]
 env_variables:
