--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1840,7 +1840,6 @@
 
 %p I assume that after Docker runs ingestapp.py, then a Flask app will be running on the host.
 
-
 %p In codelabs-tab, I clicked the next link in the series:
 
 %p
@@ -1848,13 +1847,7 @@
     https://codelabs.developers.google.com/codelabs/cpb100-serverless-ingest/#3
 %p I studied the above page.
 
-%p In Cloud-Shell-tab, I ran a shell command:
-
-.syntax
-  %pre
-    %code cat cron.yaml
-
-%p I saw this:
+%p In Cloud-Shell-tab, I used the nano editor to enhance cron.yaml:
 
 .syntax
   %pre
@@ -1890,23 +1883,14 @@
   %pre
     =render 'lesson001y'
 
-%p I ran other shell commands and saw this:
+%p The above error made little sense to me.
+
+%p I decided to abandon this effort.
+
+%p Perhaps in the future I will encounter App-Engine training content which works better.
 
 
-.syntax
-  %pre
-    =render 'lesson001z'
-
-%p The above two shell commands generated many-many pages of text.
-
-%p Then at the end it issued an error.
-
-%p I will take time to debug this after I gain more knowledge about these topics:
-
-%ul
-  %li GCP
-  %li Docker
-  %li App Engine
+%p That ended my interaction with the CPB100-node I call: "Serverless-Ingest".
 
 
 %a(href='#top') [top]
