--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1892,10 +1892,42 @@
 
 %p That ended my interaction with the CPB100-node I call: "Serverless-Ingest".
 
-
 %a(href='#top') [top]
 %hr/
+
+
+
 %h2#distributed-landsat Distributed-Landsat
+
+%p In codelabs-tab, I clicked the next link in the series:
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat
+
+%p I studied the page it served me:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat/#0' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat/#0
+
+%p I studied the next page it served me:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat/#1' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat/#1
+
+%p In the GCP-tab I visited this URL:
+%p
+  %a(href='https://console.cloud.google.com/apis' target='x')
+    https://console.cloud.google.com/apis
+%p I clicked the blue-button: "ENABLE APIS AND SERVICES".
+
+%p I searched for: "Google Dataflow API".
+
+%p I found it; I enabled it.
+
+
+
 %p under construction
 
 %a(href='#top') [top]
