--- a/app/views/lessons/_lesson001y.erb
+++ b/app/views/lessons/_lesson001y.erb
@@ -83,6 +83,6 @@ Traceback (most recent call last):
     from google.cloud.exceptions import make_exception
 ImportError: cannot import name make_exception
 
-bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab2b/scheduled$
-bikle101@cpb100-195004:~/training-data-analyst/CPB100/lab2b/scheduled$
+cs101@cpb100-195004:~/training-data-analyst/CPB100/lab2b/scheduled$
+cs101@cpb100-195004:~/training-data-analyst/CPB100/lab2b/scheduled$
 </code>
