--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -1956,6 +1956,35 @@
   %li write out info about scene
   %li compute ndvi on scene
   
+%p In codelabs-tab, I clicked the next link in the series:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat/#3' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat/#3
+
+%p I studied that page.
+
+%p In Cloud-Shell-tab, I ran shell commands:
+
+.syntax
+  %pre
+    %code
+      cd ~/training-data-analyst/blogs/landsat/
+      nano run_on_cloud.sh
+    
+%p I changed the PROJECT and BUCKET variables to values suitable for me:
+
+.syntax
+  %pre
+    %code 
+      PROJECT=cpb100-195004
+      BUCKET=cs101feb2018
+
+
+
+
+
+
 
 %p under construction
 
