--- a/app/views/lessons/_lesson001z.erb
+++ b/app/views/lessons/_lesson001z.erb
@@ -1,2 +1,10 @@
-<code class='bash'>
+<code class='bash'>cs101@cpb100-195004:~/training-data-analyst/blogs/landsat$ ./run_oncloud.sh cpb100-195004 cs101feb2018
+CommandException: 1 files/objects could not be removed.
+Traceback (most recent call last):
+  File "./dfndvi.py", line 16, in <module>
+    import apache_beam as beam
+ImportError: No module named apache_beam
+cs101@cpb100-195004:~/training-data-analyst/blogs/landsat$
+cs101@cpb100-195004:~/training-data-analyst/blogs/landsat$
+cs101@cpb100-195004:~/training-data-analyst/blogs/landsat$
 </code>
