--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -2005,25 +2005,26 @@
   %pre
     =render 'lesson001za'
 
+%p In codelabs-tab, I clicked the next link in the series:
 
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat/#4' target='x')
+    https://codelabs.developers.google.com/codelabs/cpb100-distributed-landsat/#4
 
+%p I studied that page.
 
+%p In GCP-tab, I visited the URL below:
 
+%p
+  %a(href='http://console.cloud.google.com/dataflow' target='x')
+    http://console.cloud.google.com/dataflow
+%p I saw this:
 
-
-
-
-
-
-
-
+%img(src='/lesson001/df1.png')
 %hr/
+%img(src='/lesson001/df2.png')
 
-%p I decided to abandon this effort.
-
-%p Perhaps in the future I will encounter App-Engine training content which works better.
-
-%p That ended my interaction with the CPB100-node I call: "Distributed-Landsat".
+%p I saw that as good evidence that my DataFlow job was running.
 
 %a(href='#top') [top]
 
