--- a/app/views/lessons/lesson001.html.haml
+++ b/app/views/lessons/lesson001.html.haml
@@ -2026,6 +2026,23 @@
 
 %p I saw that as good evidence that my DataFlow job was running.
 
+%p Eventually, it finished:
+%img(src='/lesson001/df3.png')
+
+%p In GCP tab I visited URL:
+%p
+  %a(href='http://console.cloud.google.com/storage' target='x')
+    http://console.cloud.google.com/storage
+
+%p I searched about and found much output from DataFlow:
+
+%img(src='/lesson001/df4.png')
+
+
+%p That ended my interaction with the CPB100-node I call: "Distributed-Landsat"
+
+%p Also that ended my interaction with the CPB100.
+
 %a(href='#top') [top]
 
 %hr/
